[gd_scene load_steps=9 format=3 uid="uid://b85efult8x7e4"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_k2s7n"]
[ext_resource type="Resource" uid="uid://hsjeffubbbkg" path="res://scenes/entities/player.tres" id="2_a7xx0"]
[ext_resource type="AudioStream" uid="uid://d3x7hcip1w8aw" path="res://assets/sounds/player/footstep.mp3" id="2_ihd0j"]
[ext_resource type="Script" path="res://scripts/head_bob.gd" id="2_vfd0f"]
[ext_resource type="PackedScene" uid="uid://dd2emxxrb6ks5" path="res://scenes/ui/ui.tscn" id="5_1side"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3vnri"]
radius = 0.2
height = 1.0

[sub_resource type="Environment" id="Environment_kalws"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="World3D" id="World3D_nl8wn"]
environment = SubResource("Environment_kalws")

[node name="Player" type="Node3D" groups=["player"]]
script = ExtResource("1_k2s7n")
enable_debug_hotkeys = true
entity = ExtResource("2_a7xx0")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0)

[node name="FootstepsPlayer" type="AudioStreamPlayer3D" parent="CharacterBody3D"]
stream = ExtResource("2_ihd0j")
volume_db = -30.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_3vnri")

[node name="Head" type="Node3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D/Head"]
script = ExtResource("2_vfd0f")
bob_speed = 0.072
return_speed = 0.16
horizontal_bob_distance = 0.0
vertical_bob_distance = 0.03
hand_horizontal_bob_distance = 0.02
hand_vertical_bob_distance = 0.01

[node name="ItemGhostRaycast" type="RayCast3D" parent="CharacterBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.1)
target_position = Vector3(0, -2, 0)

[node name="LookRaycast" type="RayCast3D" parent="CharacterBody3D/Head"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.1)
target_position = Vector3(0, -5, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="UI" parent="CanvasLayer" instance=ExtResource("5_1side")]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_nl8wn")
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Hand" type="Node3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.275369, -0.755904, -0.593953, -0.773116, 0.541342, -0.330514, 0.571369, 0.368181, -0.733471, 0.35, 0.28, -0.38)

[node name="Camera3D2" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.48, 0)
script = ExtResource("2_vfd0f")
bob_speed = 0.072
return_speed = 0.16
horizontal_bob_distance = 0.0
vertical_bob_distance = 0.03
hand_horizontal_bob_distance = 0.02
hand_vertical_bob_distance = 0.01

[connection signal="hotbar_items_updated" from="." to="CanvasLayer/UI" method="update_hotbar"]
[connection signal="inventory_button_pressed" from="." to="CanvasLayer/UI" method="_on_player_inventory_button_pressed"]
[connection signal="inventory_updated" from="." to="CanvasLayer/UI" method="_on_player_inventory_updated"]
[connection signal="menu_opened" from="CanvasLayer/UI" to="." method="_on_ui_menu_opened"]
[connection signal="menus_closed" from="CanvasLayer/UI" to="." method="_on_ui_menus_closed"]
